# probable-intel

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.claude/commands/: new-node.md  sprint.md  verify.md
.github/workflows/: ci.yml
docs/decisions/: ADR-001-asyncio-over-threading.md  ADR-002-nexus-dsl-as-yaml.md  ADR-003-networkx-default-kg-backend.md  ADR-004-vader-primary-sentiment.md  ADR-005-source-hash-for-dedup.md
nexus/apparatuses/: cyber-collection.nx  mvp-demo.nx
probable_intel/: __init__.py
probable_intel/cli/: main.py
probable_intel/hub/: api.py  factory.py  federation.py  health.py  hub.py  lifecycle.py  registry.py  secrets.py
probable_intel/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  router.py  vllm_provider.py
probable_intel/nexus/: __init__.py  errors.py  grammar.py  loader.py  parser.py  spec.py  validator.py
probable_intel/nodes/: __init__.py  base.py
probable_intel/nodes/analysts/: entity_node.py  narrative_node.py  sentiment_node.py  threat_node.py
probable_intel/nodes/archivists/: kg_node.py  storage_node.py
probable_intel/nodes/coordinators/: task_router.py
probable_intel/nodes/counterintel/: attribution_node.py  deception_node.py  fingerprint_node.py  opsec_node.py
probable_intel/spine/: __init__.py  channel.py  packet.py  spine.py
probable_intel/storage/: sqlite_backend.py
tests/integration/: test_apparatus_e2e.py
tests/unit/: test_federation.py  test_nexus_parser.py  test_spine.py  test_threat_eval.py
tests/unit/nodes/: test_llm.py  (+8 more)
(+7 files in other folders)
