[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probable-intel"
version = "0.1.0"
description = "Autonomous intelligence node network"
authors = [
    { name = "probable-intel-ops", email = "ops@probable-intel.local" },
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "lark>=1.1",
    "httpx>=0.27",
    "atoma>=0.0.17",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "networkx>=3.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "watchfiles>=0.22",
    "anthropic>=0.29",
    "psutil>=5.9",
    "cryptography>=42.0",
    "vaderSentiment>=3.3",
    "jinja2>=3.1",
    "httpx-sse>=0.4",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7",
]
browser = [
    "playwright>=1.44",
    "curl_cffi>=0.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpserver>=1.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
pi = "probable_intel.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["probable_intel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
